issue #3940 increase number of attachments to 50 (#4030)
* increase number of attachments limit to 50

* hide scrollbars for .ui-modal-attachment .swal2-html-container

--- a/extension/css/webmail.css
+++ b/extension/css/webmail.css
@@ -434,6 +434,7 @@ body.cryptup_gmail div.recipients_use_encryption a {
   height: 100vh;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 .swal2-container.ui-modal-attachment iframe {
